package factorymethod.factory

abstract class Product {
    abstract fun use()
}